force-app/main/default/objects/numm__Journal__c/numm__Journal__c.object-meta.xml
<CustomObject>
    <description>Objet des journaux comptable</description>
    <label>Journal</label>
    <nameField>
        <label>Journal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journaux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>