force-app/main/default/objects/numm__Journal__c/fields/numm__Blocage__c.field-meta.xml
<CustomField>
    <fullName>numm__Blocage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher ce choix lorsque le journal ne doit plus être utilisé</inlineHelpText>
    <label>Blocage</label>
    <type>Checkbox</type>
</CustomField>