force-app/main/default/objects/numm__Journal__c/fields/numm__CategorieJournal__c.field-meta.xml
<CustomField>
    <fullName>numm__CategorieJournal__c</fullName>
    <label>Catégorie du journal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement</fullName>
            </value>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Clôture</fullName>
            </value>
            <value>
                <fullName>Opération Diverse</fullName>
            </value>
            <value>
                <fullName>Relevé bancaire</fullName>
            </value>
            <value>
                <fullName>Vente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>