force-app/main/default/objects/numm__Journal__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Code Entité</description>
    <inlineHelpText>Affecter le journal à une entité</inlineHelpText>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Journaux</relationshipLabel>
    <relationshipName>Journaux</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>