force-app/main/default/objects/numm__Journal__c/fields/numm__Facturation__c.field-meta.xml
<CustomField>
    <fullName>numm__Facturation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher cette case pour que ce journal soit pris en compte lors de la création de facture dans NUMM.</inlineHelpText>
    <label>Facturation</label>
    <type>Checkbox</type>
</CustomField>