force-app/main/default/objects/numm__Journal__c/fields/numm__Flux__c.field-meta.xml
<CustomField>
    <fullName>numm__Flux__c</fullName>
    <inlineHelpText>Sélectionner un flux pour que les pièces de ce journal soient prises en compte pour les éditions comptables.</inlineHelpText>
    <label>Flux</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Réel</fullName>
                <default>true</default>
                <label>Réel</label>
            </value>
            <value>
                <fullName>Temporaire</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Banque</fullName>
            </value>
            <value>
                <fullName>Relevé bancaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>