force-app/main/default/objects/numm__Journal__c/fields/numm__IdAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__IdAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lorsqu&#39;un compte général est lié à un journal</inlineHelpText>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Journaux</relationshipLabel>
    <relationshipName>Journaux</relationshipName>
    <type>Lookup</type>
</CustomField>