force-app/main/default/objects/numm__Journal__c/fields/numm__IdThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdThirdParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Le tiers est à renseigner pour la création de journaux de banque</inlineHelpText>
    <label>Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entity__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Tech_CategorieJournal__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__CategorieJournal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Journaux</relationshipLabel>
    <relationshipName>Journaux</relationshipName>
    <type>Lookup</type>
</CustomField>