force-app/main/default/objects/numm__Journal__c/fields/numm__JournalRepartition__c.field-meta.xml
<CustomField>
    <fullName>numm__JournalRepartition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Journal de répartition dans le cas de gestion des propriétaires</description>
    <label>Journal de répartition</label>
    <referenceTo>numm__Journal__c</referenceTo>
    <relationshipLabel>Journaux</relationshipLabel>
    <relationshipName>Journaux</relationshipName>
    <type>Lookup</type>
</CustomField>