force-app/main/default/objects/numm__Journal__c/fields/numm__LockedDate__c.field-meta.xml
<CustomField>
    <fullName>numm__LockedDate__c</fullName>
    <description>Date de blocage du journal</description>
    <inlineHelpText>Saisir une date à partir de laquelle une écriture pourra être comptabilisée.</inlineHelpText>
    <label>Date de blocage</label>
    <type>Date</type>
</CustomField>