force-app/main/default/objects/numm__Journal__c/fields/numm__message_compteur__c.field-meta.xml
<CustomField>
    <fullName>numm__message_compteur__c</fullName>
    <formula>IMAGE( 
CASE( numm__Nombre_de_compteurs_actifs__c , 
0, &quot;/img/msg_icons/warning24.png&quot;,
&quot;/img/msg_icons/confirm24.png&quot;), &quot;Compteurs actifs&quot;)
&amp;
&quot; &quot;
&amp;
CASE( numm__Nombre_de_compteurs_actifs__c , 
0, &quot;N&#39;oubliez pas de configurer un compteur.&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>