force-app/main/default/objects/numm__Journal__c/fields/numm__Nombre_de_compteurs_actifs__c.field-meta.xml
<CustomField>
    <fullName>numm__Nombre_de_compteurs_actifs__c</fullName>
    <label>Nombre de compteurs actifs</label>
    <summaryFilterItems>
        <field>numm__Counter__c.numm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>numm__Counter__c.numm__IdJournal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>