force-app/main/default/objects/numm__Journal__c/fields/numm__OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>numm__OpeningDate__c</fullName>
    <description>Date d&#39;ouverture de la saisie du journal</description>
    <inlineHelpText>Date à laquelle la saisie peut être réalisée sur ce journal</inlineHelpText>
    <label>Date d&#39;ouverture mensuelle</label>
    <type>Date</type>
</CustomField>