force-app/main/default/objects/numm__Journal__c/validationRules/numm__Flux_et_categorie_obligatoires.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Flux_et_categorie_obligatoires</fullName>
    <active>true</active>
    <description>Le flux et la catégorie du journal sont obligatoires</description>
    <errorConditionFormula>OR(ISPICKVAL(numm__CategorieJournal__c, &quot;&quot;) ,ISPICKVAL(numm__Flux__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Le flux et la catégorie du journal sont obligatoires</errorMessage>
</ValidationRule>