force-app/main/default/objects/numm__Journal__c/validationRules/numm__TiersObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__TiersObligatoire</fullName>
    <active>true</active>
    <description>Le tiers est obligatoire pour les journaux de Banque.</description>
    <errorConditionFormula>AND(
TEXT( numm__CategorieJournal__c ) = &#39;Banque&#39;,
 ISBLANK( numm__IdThirdParty__c )
)</errorConditionFormula>
    <errorDisplayField>numm__IdThirdParty__c</errorDisplayField>
    <errorMessage>Le tiers est obligatoire pour les journaux de Banque.</errorMessage>
</ValidationRule>